# Animations

./: .gitignore  Cargo.toml
animation/: Cargo.toml
animation/src/: lib.rs  main.rs
src/: main.rs
svg_macro/: Cargo.toml
svg_macro/src/: lib.rs
svgr/: Cargo.toml
svgr/src/: lib.rs  main.rs  parse.rs  tag.rs  types.rs
