[package]
name = "vol-indicator"
version = "0.1.0"
authors = ["VictorKeil <keilvictor60@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = { version = ">=0.13.0", features = [ "v3_20", "v3_22" ]}
cairo-rs = { version = "^0.9.1"}
svg = { version = "0.9.1" }
svgr = { path = "./svgr" }
nom = { version = "6.1.2" }
