[package]
name = "svg_macro"
version = "0.1.0"
authors = ["VictorKeil <keilvictor60@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true
proc_macro2 = true

[dependencies]
syn = { version = "1.0" , features = [ "parsing", "full", "extra-traits" ] }
quote = "1.0"
proc-macro2 = "1.0"
