[package]
name = "svgr"
version = "0.1.0"
authors = ["VictorKeil <keilvictor60@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg_macro = { path = "../svg_macro" }
svg = { version = "0.9.1" }
nom = { version = "6.1.2" }
